<resources>
    <string name="app_name" translatable="false">GPS Phone Number Tracker</string>
    <string name="info1"><![CDATA[Capture photos with time &\nlocation proof]]></string>
    <string name="infosub1"><![CDATA[Add date, time, & GPS location to every photo]]></string>
    <string name="infosub2"><![CDATA[See location & movement on an interactive map]]></string>
    <string name="infosub3"><![CDATA[Compass, nearby places, & route planner included]]></string>
    <string name="infosub4"><![CDATA[Simple, precise direction guidance]]></string>
    <string name="map_key">AIzaSyBLIGwxAlODMg1i9AJiVKG4tNdTVKbSwSI</string>
    <string name="mDeletSub">Are you sure you want to delete this zone?</string>
    <string name="waiting_for_gps_signal_d">Waiting for GPS Signal</string>
    <string name="chooselang">Choose your Language</string>
    <string name="next">Next</string>
    <string name="info2">Track phones with live\nlocation</string>
    <string name="info3">Powerful tools for smarter\ntracking</string>
    <string name="start">Start</string>
    <string name="info4">Navigate Your Way\nEasily</string>
    <string name="livelocation">Live Location</string>
    <string name="phonelocator">Phone Locator</string>
    <string name="phonelocator1">Set safe areas</string>
    <string name="nearby">Near By</string>
    <string name="nearby1"><![CDATA[Find people & places]]></string>
    <string name="trackinguser">Tracking User</string>
    <string name="trackinguser1">Track user List</string>
    <string name="realtime">Real Time Tracking</string>
    <string name="realtime1">Live Route Tracking</string>
    <string name="gpstool">GPS Tools</string>
    <string name="gpstool1"><![CDATA[Track, navigate, & explore]]></string>
    <string name="adduser">Add User</string>
    <string name="adduser1">Create New User</string>
    <string name="traffic">Traffic Alert</string>
    <string name="traffic1">Instant Traffic Updates</string>
    <string name="zonealert">Zone Alert</string>
    <string name="zonealert1">Set safe areas</string>
    <string name="nointernet">No Internet Connection</string>
    <string name="txt_nointernet">You’re currently offline. Please check your Wi-Fi or mobile data and try again.</string>
    <string name="open_wifi_setting">Open Wi-Fi Setting</string>
    <string name="txt_uninstall">Uninstall</string>
    <string name="compass">Compass</string>
    <string name="compass1"><![CDATA[Direction & heading]]></string>
    <string name="stopwatch">Stop Watch</string>
    <string name="stopwatch1">Accurate timing</string>
    <string name="speedmeter">Speedometer</string>
    <string name="speedmeter1">Accurate speed tracking</string>
    <string name="areacode">Area Codes</string>
    <string name="areacode1">All area codes</string>
    <string name="levelmeter">Level Meter</string>
    <string name="levelmeter1">Balance made easy</string>
    <string name="art_gallery">Art Gallery</string>
    <string name="bar">Bars</string>
    <string name="bank">Bank</string>
    <string name="atm">Bank ATMs</string>
    <string name="saloon">Beauty Salons</string>
    <string name="book">Book Stores</string>
    <string name="coffee">Coffee Shops</string>
    <string name="cardealer">Car Dealers</string>
    <string name="bygas">Gas Station</string>
    <string name="bygym">Gym</string>
    <string name="hospital">Hospitals</string>
    <string name="byhotel">Hotels</string>
    <string name="parking">Parking</string>
    <string name="retuarant">Restaurants</string>
    <string name="settext1">A proven success rate with over 90% file recovery</string>
    <string name="settext2">Why struggle to recover files? Do it easily anytime\nGet your files back in just a few taps</string>
    <string name="tryagin">Try Again</string>
    <string name="still">Still want to uninstall</string>
    <string name="surtxt">Problems while using the app</string>
    <string name="survey_1">App is slow or not working properly</string>
    <string name="survey_2">Too many ads</string>
    <string name="survey_3">Takes too much storage</string>
    <string name="survey_4">Premium features are too expensive</string>
    <string name="facebook_client_token" translatable="false">470d5de1fb1f0ecd67aec080c9f5835f</string>
    <string name="tiktok_token" translatable="false">t9ddtu</string>
    <string name="adjust_token" translatable="false">9r5ojughol4w</string>
    <string name="nocityfound">No City Found</string>
    <string name="waiting_gps">Waiting for GPS Signal</string>
    <string name="total">Total</string>
    <string name="avg">Average</string>
    <string name="top">Top</string>
    <string name="detail">Details</string>
    <string name="known">Unknown</string>
    <string name="request">Request</string>
    <string name="no_requeest">No new request found</string>
    <string name="trackinguselist">Tracking User List</string>
    <string name="nouser">You don\'t have any friends yet</string>
    <string name="shareqr">Share QR</string>
    <string name="addac">Add Account</string>
    <string name="orscan">Or Scan</string>
    <string name="sharedirect">Share Direct</string>
    <string name="share">Share</string>
    <string name="myqr">My Qr</string>
    <string name="entercode">Enter Code</string>
    <string name="finsc">Find Account</string>
    <string name="add">Add</string>
    <string name="standard">Standard</string>
    <string name="normal">Normal</string>
    <string name="satelite">Satellite</string>
    <string name="timealert">Time Alert</string>
    <string name="modrat">Modrate</string>
    <string name="slower">Slower</string>
    <string name="extrem">Extreme</string>
    <string name="createzon">Create Zone</string>
    <string name="status">Status</string>
    <string name="alerts">Alerts</string>
    <string name="noenter">On Enter</string>
    <string name="onexit">On Exit</string>
    <string name="enterzon">Enter Zone name</string>
    <string name="searchlocation">Search Your Location</string>
    <string name="lap">Lap</string>
    <string name="searchbycity">Search by city</string>
    <string name="call">Call</string>
    <string name="sms">SMS</string>
    <string name="search_phone_no">Search Phone number</string>
    <string name="setting">Settings</string>
    <string name="general">General</string>
    <string name="other">Other</string>
    <string name="changelan">Change Language</string>
    <string name="rateus">Rate Us</string>
    <string name="rateus1">Rate this App</string>
    <string name="shareapp">Share App</string>
    <string name="shareapp1">Share with friends</string>
    <string name="tt_privacy">Protect your phone</string>
    <string name="safe">Safe</string>
    <string name="danger">Danger</string>
    <string name="shareaddre">Share Location Address</string>
    <string name="aboutus">About Us</string>
    <string name="aboutus1">Your needs, Our priority</string>
    <string name="contactus">Contact Us</string>
    <string name="contactus1">Support you can rely on</string>
    <string name="thankyou">Thank You!</string>
    <string name="thankyou1">Your GPS tracking is now active and ready to use.</string>
    <string name="exit1">Exit</string>
    <string name="cancel1">Cancel</string>
    <string name="done">Done</string>
    <string name="permission">Permission Required</string>
    <string name="permission1">This permission is needed to use this feature. Please allow access to proceed.</string>
    <string name="notification">Notification</string>
    <string name="notification1"><![CDATA[Allow notifications for helpful alerts & updates]]></string>
    <string name="location">Location</string>
    <string name="location1">Allow location access to show nearby</string>
    <string name="camera">Camera</string>
    <string name="camera1">Turn on camera permission to continue</string>
    <string name="grantper">Grant Permission</string>
    <string name="needpermission">Need Permissions</string>
    <string name="needpermission1">This app needs permission to use this feature. You can grant them in app settings.</string>
    <string name="gotosetting">GOTO SETTINGS</string>
    <string name="enter_code">Please Enter Code</string>
    <string name="user_not_found">User Not Found</string>
    <string name="already_add">User already in your friend list!!</string>
    <string name="already_request">Friend request already sent!</string>
    <string name="frd_request">Friend request sent</string>
    <string name="unable_map">Unable to open map</string>
    <string name="error">Error occurred!</string>
    <string name="enter_phone">Please enter a phone number</string>
    <string name="invalid_phone">Invalid phone number format..!</string>
    <string name="error_request">Something went wrong!</string>
    <string name="faile_qr">Failed to share QR image</string>
    <string name="copy_clip">Copied To Clipboard</string>
    <string name="enter_city">Enter City Name.!</string>
    <string name="fail_call">Failed to initiate call:</string>
    <string name="already_contact">Number already exists in contacts</string>
    <string name="fail_add_contact">Failed to add contact:</string>
    <string name="fail_add_sms">Failed to send SMS:</string>
    <string name="enter_location">Please enter location text</string>
    <string name="not_geo">Geocoder not available on this device</string>
    <string name="not_location">Location not found</string>
    <string name="error_location">Error searching location:</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="delete_zone">Delete Zone</string>
    <string name="not_number">Not a mobile number</string>
</resources>