<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F3F4F8"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:layout_marginStart="4dp"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingEnd="16dp">

        <ImageView
            android:id="@+id/mIvBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingVertical="10dp"
            android:paddingStart="10dp"
            android:src="@drawable/ic_u_back" />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:fillViewport="true"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_survey" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_regular"
                android:gravity="center"
                android:text="@string/surtxt"
                android:textColor="#121212"
                android:textSize="14sp" />

            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:layout_marginVertical="10dp"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/rbFeature"
                    style="@style/CustomRadioRight"
                    android:text="@string/survey_1"
                    android:textColor="#3e4453" />

                <RadioButton
                    android:id="@+id/rbAds"
                    style="@style/CustomRadioRight"
                    android:checked="true"
                    android:text="@string/survey_2"
                    android:textColor="#3e4453" />

                <RadioButton
                    android:id="@+id/rbDontNeed"
                    style="@style/CustomRadioRight"
                    android:text="@string/survey_3"
                    android:textColor="#3e4453" />

                <RadioButton
                    android:id="@+id/rbOther"
                    style="@style/CustomRadioRight"
                    android:text="@string/survey_4"
                    android:textColor="#3e4453" />
            </RadioGroup>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/mIvCancel"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:background="@drawable/bg_tab_selected"
                    android:backgroundTint="#DFE2EA"
                    android:fontFamily="@font/sfprotext_semibold"
                    android:gravity="center"
                    android:text="@string/cancel"
                    android:textColor="#8F9AB1"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/mIvUninstall"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/bg_tab_selected"
                    android:fontFamily="@font/sfprotext_semibold"
                    android:gravity="center"
                    android:text="@string/txt_uninstall"
                    android:textColor="@color/white"
                    android:textSize="14sp" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <FrameLayout
        android:id="@+id/fr_ads"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <include layout="@layout/shimmer_native_medium" />
    </FrameLayout>
</LinearLayout>