<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="6dp"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingStart="16dp"
    android:paddingEnd="16dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:background="@drawable/bg_dialog"
        android:layout_marginHorizontal="10dp"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="10dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:src="@drawable/ic_no_wifi" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/sfprotextext_bold"
            android:gravity="center_vertical"
            android:text="@string/nointernet"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/sfprotext_medium"
            android:gravity="center"
            android:maxLines="2"
            android:text="@string/txt_nointernet"
            android:textColor="#A6A6A6"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/mIvOpenSetting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="20dp"
            android:background="@drawable/icon_next"
            android:fontFamily="@font/sfprotext_semibold"
            android:gravity="center"
            android:text="@string/open_wifi_setting"
            android:textColor="@color/white"
            android:textSize="14sp" />

    </LinearLayout>

</LinearLayout>
