<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F3F4F8"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:layout_marginStart="4dp"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingEnd="16dp">

        <ImageView
            android:id="@+id/mIvBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingVertical="10dp"
            android:paddingStart="10dp"
            android:src="@drawable/ic_u_back" />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:fillViewport="true"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/icon_uninstall" />

            <TextView
                android:id="@+id/mTxtTop1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/roboto_regular"
                android:gravity="center"
                android:text="@string/settext1"
                android:textColor="#3E4453"
                android:textSize="14sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:fontFamily="@font/roboto_regular"
                android:gravity="center"
                android:text="@string/settext2"
                android:textColor="#8F9AB1"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/mIvTryAgain"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/icon_next1"
                android:fontFamily="@font/sfprotext_semibold"
                android:gravity="center"
                android:text="@string/tryagin"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/mIvStillUninstall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginVertical="10dp"
                android:background="@drawable/icon_next1"
                android:backgroundTint="#DFE2EA"
                android:fontFamily="@font/sfprotext_semibold"
                android:gravity="center"
                android:text="@string/still"
                android:textColor="#8F9AB1"
                android:textSize="14sp" />

        </LinearLayout>
    </ScrollView>

    <FrameLayout
        android:id="@+id/fr_ads"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <include layout="@layout/shimmer_native_medium" />
    </FrameLayout>
</LinearLayout>